# recision

./: Cargo.toml  README.md
.github/workflows/: rust-ci.yml
src/: cli.rs  config.rs  lib.rs  main.rs  subcommands.rs  test_utils.rs
src/subcommands/: project.rs  workspace.rs
tests/: cli.rs  cli_project.rs  cli_workspace.rs  common.rs
