[package]
name = "recision"
version = "0.1.0"
edition = "2021"
description = "Multi-Project Decision Helper"
authors = ["Florian Ehmann"]
readme = "README.md"
repository = "https://github.com/florianehmann/recision"
keywords = ["cli", "decision"]
categories = ["command-line-utilities"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'unwind'
strip = 'debuginfo'

[dependencies]
anyhow = "1.0.79"
clap = "4.0"
human-panic = "1.2.3"

[dev-dependencies]
anyhow = "1.0.79"
assert_cmd = "2.0.13"
predicates = "3.1.0"